Fixes issue with spacings
.pt class was padding on all directions (top, right, bottom, left) but
it got overwritten by .pt padding-top.

The solution was to add a dash to the spacing-sizes. For example:

.pt is padding-top
.p-t is padding tiny on all directions

Spacing utilities needed

--- a/src/scss/utilities/_utilities.spacings.scss
+++ b/src/scss/utilities/_utilities.spacings.scss
@@ -12,39 +12,39 @@
  *   .p {}
  */
 
-$inuit-spacing-directions: (
-  null: null,
-  "t": "-top",
-  "r": "-right",
-  "b": "-bottom",
-  "l": "-left",
-  "h": "-left" "-right",
-  "v": "-top" "-bottom",
+$inuit-spacing-properties: (
+	"p": "padding",
+	"m": "margin",
 ) !default;
 
-$inuit-spacing-properties: (
-  "p": "padding",
-  "m": "margin",
+$inuit-spacing-directions: (
+	null: null,
+	"t": "-top",
+	"r": "-right",
+	"b": "-bottom",
+	"l": "-left",
+	"h": "-left" "-right",
+	"v": "-top" "-bottom",
 ) !default;
 
 $inuit-spacing-sizes: (
-  null: $inuit-global-spacing-unit,
-  "t": $inuit-global-spacing-unit-tiny,
-  "s": $inuit-global-spacing-unit-small,
-  "l": $inuit-global-spacing-unit-large,
-  "h": $inuit-global-spacing-unit-huge,
-  "n": 0,
-  "a": auto,
+	null: $inuit-global-spacing-unit,
+	"-t": $inuit-global-spacing-unit-tiny,
+	"-s": $inuit-global-spacing-unit-small,
+	"-l": $inuit-global-spacing-unit-large,
+	"-h": $inuit-global-spacing-unit-huge,
+	"-n": 0,
+	"-a": auto,
 ) !default;
 
 @each $property-namespace, $property in $inuit-spacing-properties {
-  @each $direction-namespace, $direction-rules in $inuit-spacing-directions {
-    @each $size-namespace, $size in $inuit-spacing-sizes {
-      .#{$property-namespace}#{$direction-namespace}#{$size-namespace} {
-        @each $direction in $direction-rules {
-          #{$property}#{$direction}: $size !important;
-        }
-      }
-    }
-  }
+	@each $direction-namespace, $direction-rules in $inuit-spacing-directions {
+		@each $size-namespace, $size in $inuit-spacing-sizes {
+			.#{$property-namespace}#{$direction-namespace}#{$size-namespace} {
+				@each $direction in $direction-rules {
+					#{$property}#{$direction}: $size !important;
+				}
+			}
+		}
+	}
 }
